--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom(igraph,'V<-')
 importFrom(igraph,E)
 importFrom(igraph,V)
 importFrom(igraph,as_adjacency_matrix)
+importFrom(igraph,as_edgelist)
 importFrom(igraph,degree)
 importFrom(igraph,ecount)
 importFrom(igraph,is.directed)
