--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: PathwaySpace
 Type: Package
 Title: Spatial projection of network signals along geodesic paths
-Version: 0.99.5
+Version: 0.99.6
 Authors@R: 
     c(person("Vinicius", "Chagas", role = "ctr"),
       person("Victor", "Apolonio", role = "ctr"),
@@ -9,7 +9,7 @@ Authors@R:
               email = "mauro.a.castro@gmail.com",
               comment = c(ORCID = "0000-0003-4942-8131")))
 Depends: R(>= 4.2), methods
-Imports: grDevices, stats, scales, igraph, RANN, ggplot2, ggrepel
+Imports: grDevices, stats, scales, igraph, RANN, ggplot2, ggrepel, ggforce, grid
 Suggests: knitr, rmarkdown, RUnit, BiocGenerics, BiocStyle, RedeR
 Description: For a given graph containing vertices, edges, and a signal associated with the vertices, the PathwaySpace package performs a convolution operation, which involves a weighted combination of neighboring vertices and their associated signals. The package then uses a decay function to project these signals, creating geodesic paths on a 2D-image space. *PathwaySpace* could have various applications, such as visualizing and analyzing network data in a graphical format that highlights the relationships and signal strengths between vertices. It can be particularly useful for understanding the influence of signals through complex networks. By combining graph theory, signal processing, and visualization, the *PathwaySpace* package provides a novel way of representing and analyzing graph data.
 License: Artistic-2.0
@@ -25,6 +25,7 @@ Collate:
     pspaceClasses.R
     pspaceGenerics.R
     pspaceMethods.R
-    pspacePlots.R
+    pspaceImage.R
+    pspaceGraph.R
 Encoding: UTF-8
 RoxygenNote: 7.2.3
