--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,8 @@ exportMethods(circularProjection)
 exportMethods(getPathwaySpace)
 exportMethods(length)
 exportMethods(names)
-exportMethods(plotPathwaySpace)
+exportMethods(plotGraphSpace)
+exportMethods(plotImageSpace)
 exportMethods(polarProjection)
 exportMethods(silhouetteMapping)
 exportMethods(summitMapping)
@@ -21,6 +22,7 @@ exportMethods(vertexSignal)
 exportMethods(vertexWeight)
 import(methods)
 importFrom(RANN,nn2)
+importFrom(ggforce,geom_circle)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,coord_fixed)
@@ -29,7 +31,9 @@ importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,expansion)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
+importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,margin)
 importFrom(ggplot2,scale_fill_gradientn)
@@ -44,6 +48,8 @@ importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,convertColor)
 importFrom(grDevices,rgb)
+importFrom(grid,arrow)
+importFrom(grid,unit)
 importFrom(igraph,'E<-')
 importFrom(igraph,'V<-')
 importFrom(igraph,E)
