--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -23,6 +23,10 @@ jobs:
       - uses: r-lib/actions/setup-renv@v2
         with:
           cache-version: 1
+        
+      - name: Install devtools
+        run: |
+          Rscript -e 'install.packages("devtools")'
 
       - name: Prepare Git
         run: |-
@@ -34,7 +38,7 @@ jobs:
         run: |
           Rscript -e 'devtools::load_all()'
           Rscript -e 'devtools::build_vignettes()'
-          git add -f ≈
+          git add -f doc
           git commit -m 'Update github page' doc
 
       - name: Push docs to Github Pages
