--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -26,6 +26,9 @@ jobs:
         
       - name: Install devtools
         run: |
+          sudo  apt-get install -y \
+          libssl-dev \
+          libcurl4-openssl-dev \
           Rscript -e 'install.packages("devtools")'
 
       - name: Prepare Git
