--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -28,7 +28,7 @@ jobs:
         run: |
           sudo  apt-get install -y \
           libssl-dev \
-          libcurl4-openssl-dev \
+          libcurl4-openssl-dev
           Rscript -e 'install.packages("devtools")'
 
       - name: Prepare Git
