--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -23,7 +23,9 @@ jobs:
       - uses: r-lib/actions/setup-renv@v2
         with:
           cache-version: 1
-        
+
+      - uses: r-lib/actions/setup-pandoc@v2
+
       - name: Install devtools
         run: |
           sudo  apt-get install -y \
