--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -45,6 +45,7 @@ jobs:
         run: |
           Rscript -e 'devtools::load_all()'
           Rscript -e 'devtools::build_vignettes()'
+          mv doc/PathwaySpace.html doc/index.html
           git add -f doc
           git commit -m 'Update github page' doc
 
