--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,7 @@ exportMethods(summitMapping)
 exportMethods(vertexSignal)
 exportMethods(vertexWeight)
 import(methods)
-importFrom(GraphSpace,igraphSpace)
+importFrom(GraphSpace,plotGraphSpace)
 importFrom(RANN,nn2)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
