--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,8 +20,8 @@ exportMethods(summitMapping)
 exportMethods(vertexSignal)
 exportMethods(vertexWeight)
 import(methods)
-importFrom(GraphSpace,plotGraphSpace)
 importFrom(RANN,nn2)
+importFrom(RGraphSpace,plotGraphSpace)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,coord_fixed)
