--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -18,7 +18,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
         with:
-          r-version: release
+          r-version: 4.3.1
 
       - uses: r-lib/actions/setup-renv@v2
         with:
