add libglpk-dev dependencies

--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -32,7 +32,8 @@ jobs:
           libssl-dev \
           libcurl4-openssl-dev \
           libharfbuzz-dev \
-          libfribidi-dev
+          libfribidi-dev \
+          libglpk-dev
           Rscript -e 'install.packages("devtools")'
 
       - name: Prepare Git
