--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -15,6 +15,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Setup System
+        run: |
+          sudo  apt-get install -y \
+          libssl-dev \
+          libcurl4-openssl-dev \
+          libharfbuzz-dev \
+          libfribidi-dev \
+          libglpk40
 
       - uses: r-lib/actions/setup-r@v2
         with:
@@ -28,12 +37,6 @@ jobs:
 
       - name: Install devtools
         run: |
-          sudo  apt-get install -y \
-          libssl-dev \
-          libcurl4-openssl-dev \
-          libharfbuzz-dev \
-          libfribidi-dev \
-          libglpk40
           Rscript -e 'install.packages("devtools")'
 
       - name: Prepare Git
