Major update May 2024

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,7 +53,7 @@ importFrom(igraph,as_adjacency_matrix)
 importFrom(igraph,as_edgelist)
 importFrom(igraph,degree)
 importFrom(igraph,ecount)
-importFrom(igraph,is.directed)
+importFrom(igraph,is_directed)
 importFrom(igraph,simplify)
 importFrom(igraph,vcount)
 importFrom(igraph,which_mutual)
