--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(buildPathwaySpace)
 export(expDecay)
 export(linearDecay)
+export(pathDistances)
+export(plotPathDistances)
 export(pspace.cols)
 export(summitWatershed)
 export(weibullDecay)
@@ -30,7 +32,10 @@ importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,expansion)
+importFrom(ggplot2,geom_area)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_raster)
+importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,margin)
 importFrom(ggplot2,scale_fill_gradientn)
@@ -39,6 +44,8 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_gray)
+importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,ylab)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,adjustcolor)
 importFrom(grDevices,col2rgb)
@@ -52,11 +59,16 @@ importFrom(igraph,V)
 importFrom(igraph,as_adjacency_matrix)
 importFrom(igraph,as_edgelist)
 importFrom(igraph,degree)
+importFrom(igraph,distances)
 importFrom(igraph,ecount)
 importFrom(igraph,is_directed)
 importFrom(igraph,simplify)
 importFrom(igraph,vcount)
 importFrom(igraph,which_mutual)
 importFrom(scales,rescale)
+importFrom(stats,density)
+importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,sd)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
