--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,10 @@ exportMethods(summitMapping)
 exportMethods(vertexSignal)
 exportMethods(vertexWeight)
 import(methods)
+importClassesFrom(RGraphSpace,GraphSpace)
 importFrom(RANN,nn2)
+importFrom(RGraphSpace,GraphSpace)
+importFrom(RGraphSpace,getGraphSpace)
 importFrom(RGraphSpace,plotGraphSpace)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
@@ -45,6 +48,7 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_gray)
 importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,adjustcolor)
@@ -62,6 +66,7 @@ importFrom(igraph,degree)
 importFrom(igraph,distances)
 importFrom(igraph,ecount)
 importFrom(igraph,is_directed)
+importFrom(igraph,is_igraph)
 importFrom(igraph,simplify)
 importFrom(igraph,vcount)
 importFrom(igraph,which_mutual)
