--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,12 @@ export(linearDecay)
 export(pathDistances)
 export(plotPathDistances)
 export(pspace.cols)
+export(signalAggregation)
+export(signalDecay)
 export(summitWatershed)
 export(weibullDecay)
 exportClasses(PathwaySpace)
 exportMethods("vertexSignal<-")
-exportMethods("vertexWeight<-")
 exportMethods(circularProjection)
 exportMethods(getPathwaySpace)
 exportMethods(length)
@@ -20,7 +21,6 @@ exportMethods(polarProjection)
 exportMethods(silhouetteMapping)
 exportMethods(summitMapping)
 exportMethods(vertexSignal)
-exportMethods(vertexWeight)
 import(methods)
 importClassesFrom(RGraphSpace,GraphSpace)
 importFrom(RANN,nn2)
@@ -29,6 +29,7 @@ importFrom(RGraphSpace,getGraphSpace)
 importFrom(RGraphSpace,plotGraphSpace)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
+importFrom(ggplot2,annotation_raster)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
@@ -52,6 +53,7 @@ importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,adjustcolor)
+importFrom(grDevices,as.raster)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,convertColor)
@@ -77,6 +79,8 @@ importFrom(scales,rescale)
 importFrom(stats,density)
 importFrom(stats,median)
 importFrom(stats,quantile)
+importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(stats,weighted.mean)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
