--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,21 +11,29 @@ export(signalDecay)
 export(summitWatershed)
 export(weibullDecay)
 exportClasses(PathwaySpace)
+exportMethods("gs_edge_attr<-")
+exportMethods("gs_vertex_attr<-")
+exportMethods("vertexDecay<-")
 exportMethods("vertexSignal<-")
 exportMethods(circularProjection)
 exportMethods(getPathwaySpace)
-exportMethods(length)
-exportMethods(names)
 exportMethods(plotPathwaySpace)
 exportMethods(polarProjection)
 exportMethods(silhouetteMapping)
 exportMethods(summitMapping)
+exportMethods(vertexDecay)
 exportMethods(vertexSignal)
 import(methods)
 importClassesFrom(RGraphSpace,GraphSpace)
 importFrom(RANN,nn2)
+importFrom(RGraphSpace,"gs_edge_attr<-")
+importFrom(RGraphSpace,"gs_vertex_attr<-")
 importFrom(RGraphSpace,GraphSpace)
 importFrom(RGraphSpace,getGraphSpace)
+importFrom(RGraphSpace,gs_ecount)
+importFrom(RGraphSpace,gs_edge_attr)
+importFrom(RGraphSpace,gs_vcount)
+importFrom(RGraphSpace,gs_vertex_attr)
 importFrom(RGraphSpace,plotGraphSpace)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
