--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(expDecay)
 export(linearDecay)
 export(pathDistances)
 export(plotPathDistances)
+export(polarDecay)
 export(pspace.cols)
 export(signalAggregation)
 export(signalDecay)
