--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -38,6 +38,7 @@ jobs:
       - name: Install devtools
         run: |
           Rscript -e 'install.packages("devtools")'
+          Rscript -e 'install.packages("remotes")'
           Rscript -e 'install.packages("knitr")'
           Rscript -e 'install.packages("rmarkdown")'
 
@@ -51,6 +52,7 @@ jobs:
         run: |
           Rscript -e 'devtools::load_all()'
           Rscript -e 'devtools::build_vignettes()'
+          Rscript -e 'remotes::install_github("sysbiolab/RGraphSpace", build_vignettes=FALSE)'
           mv doc/PathwaySpace.html doc/index.html
           git add -f doc
           git commit -m 'Update github page' doc
