--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -42,6 +42,7 @@ jobs:
           Rscript -e 'install.packages("rmarkdown")'
           Rscript -e 'install.packages("remotes")'
           Rscript -e 'remotes::install_github("sysbiolab/RGraphSpace", build_vignettes=FALSE)'
+          Rscript -e 'remotes::install_github("sysbiolab/PathwaySpace", build_vignettes=TRUE)'
 
       - name: Prepare Git
         run: |-
@@ -51,8 +52,6 @@ jobs:
 
       - name: build-vignettes
         run: |
-          Rscript -e 'devtools::load_all()'
-          Rscript -e 'devtools::build_vignettes()'
           mv doc/PathwaySpace.html doc/index.html
           git add -f doc
           git commit -m 'Update github page' doc
