--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -52,6 +52,8 @@ jobs:
 
       - name: build-vignettes
         run: |
+          Rscript -e 'devtools::load_all()'
+          Rscript -e 'devtools::build_vignettes()'
           mv doc/PathwaySpace.html doc/index.html
           git add -f doc
           git commit -m 'Update github page' doc
