--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,15 +3,15 @@ Type: Package
 Title: Spatial Projection of Network Signals along Geodesic Paths
 Version: 1.0.3
 Authors@R: 
-    c(person("Victor", "Apolonio", role = "ctr"),
-      person("Vinicius", "Chagas", role = "ctr"),
-      person("Mauro", "Castro", role = c("aut", "cre"),
-              email = "mauro.a.castro@gmail.com",
-              comment = c(ORCID = "0000-0003-4942-8131")))
+    c(person("Victor", "Apolonio", role = "ctb"),
+      person("Vinicius", "Chagas", role = "ctb"),
+      person("Sysbiolab and Collaborators", role = "fnd"),
+      person("Mauro", "Castro", role = c("aut", "cre"), email = "mauro.a.castro@gmail.com", comment = c(ORCID = "0000-0003-4942-8131"))
+      )
 Depends: R(>= 4.4), methods, RGraphSpace(>= 1.1.0)
 Imports: grDevices, stats, scales, RANN, igraph, ggplot2, ggrepel, lifecycle
 Suggests: knitr, rmarkdown, testthat, RedeR
-Description: For a given graph containing vertices, edges, and a signal associated with the vertices, the 'PathwaySpace' package performs a convolution operation, which involves a weighted combination of neighboring vertices and their associated signals. The package then uses a decay function to project these signals, creating geodesic paths on a 2D-image space. 'PathwaySpace' could have various applications, such as visualizing and analyzing network data in a graphical format that highlights the relationships and signal strengths between vertices. It can be particularly useful for understanding the influence of signals through complex networks. By combining graph theory, signal processing, and visualization, the 'PathwaySpace' package provides a novel way of representing and analyzing graph data.
+Description: For a given graph containing vertices, edges, and a signal associated with the vertices, the 'PathwaySpace' package performs a convolution operation, which involves a weighted combination of neighboring vertices and their associated signals. The package then uses a decay function to project these signals, creating geodesic paths on a 2D-image space. 'PathwaySpace' could have various applications, such as visualizing network data in a graphical format that highlights the relationships and signal strengths between vertices. It can be particularly useful for understanding the influence of signals through complex networks. By combining graph theory, signal processing, and visualization, the 'PathwaySpace' package provides a novel way of representing graph data.
 License: Artistic-2.0
 VignetteBuilder: knitr
 URL: https://github.com/sysbiolab/PathwaySpace
