--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_raster)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
 importFrom(ggplot2,margin)
 importFrom(ggplot2,scale_fill_gradientn)
 importFrom(ggplot2,scale_x_continuous)
