--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,7 +46,9 @@ importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,expansion)
 importFrom(ggplot2,geom_area)
+importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,ggplot)
