--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ importFrom(igraph,simplify)
 importFrom(igraph,vcount)
 importFrom(igraph,which_mutual)
 importFrom(lifecycle,deprecate_soft)
+importFrom(lifecycle,deprecate_stop)
 importFrom(lifecycle,deprecated)
 importFrom(lifecycle,is_present)
 importFrom(scales,rescale)
