--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(pathDistances)
 export(plotPathDistances)
 export(polarDecay)
 export(pspace.cols)
+export(pspace.pals)
 export(signalAggregation)
 export(signalDecay)
 export(summitWatershed)
@@ -36,6 +37,7 @@ importFrom(RGraphSpace,gs_edge_attr)
 importFrom(RGraphSpace,gs_vcount)
 importFrom(RGraphSpace,gs_vertex_attr)
 importFrom(RGraphSpace,plotGraphSpace)
+importFrom(colorspace,lighten)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,annotation_raster)
@@ -71,6 +73,7 @@ importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,convertColor)
 importFrom(grDevices,rgb)
+importFrom(grid,unit)
 importFrom(igraph,'E<-')
 importFrom(igraph,'V<-')
 importFrom(igraph,E)
